Remove web package. Save all links into DB. Add all neccessary code to start the project. Different little changes.